--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<img src="hnure_image.jpg" alt="Навігатор" usemap="#navigation" width="400" height="300">
 			<map name="navigation">
 				<area shape="rect" coords="0,0,133,300" href="https://nure.ua/" alt="Сайт університету">
-				<area shape="rect" coords="134,0,266,300" href="https://csd.nure.ua/" alt="Сайт кафедри">
+				<area shape="rect" coords="134,0,266,300" href="https://nure.ua/faculty/fakultet-kompyuternoyi-inzheneriyi-ta-upravlinnya" alt="Сайт кафедри">
 				<area shape="rect" coords="267,0,400,300" href="https://cist.nure.ua/ias/app/tt/f?p=778:2:3858003405559096" alt="Розклад">
 			</map>
 		</section>	
